# coursework_api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/coursework_operations/: main.py
src/coursework_operations/algorithms/: ant_colony.py  probabilistic.py
src/coursework_operations/handlers/: experiment1_handler.py  experiment2_handler.py  experiment3_handler.py  experiment4_handler.py  solve_handler.py
src/coursework_operations/models/: algorithm_parametrs.py  task.py  task_request.py
src/coursework_operations/utils/: context.py  generator.py  strategy.py
